@@ -33,8 +33,9 @@ sb-default-landfill=Default landfill type
 sb-difficulty-cost-override=__1__ __2__
 
 [string-mod-setting]
-sb-default-landfill-landfill-dry-dirt=[img=item/landfill-dry-dirt]Dry dirt
 sb-default-landfill-landfill-dirt-4=[img=item/landfill-dirt-4]Dirt
+sb-default-landfill-landfill-dry-dirt=[img=item/landfill-dry-dirt]Dry dirt
 sb-default-landfill-landfill-grass-1=[img=item/landfill-grass-1]Grass
+sb-default-landfill-landfill-landfill=[img=item/landfill]Landfill
 sb-default-landfill-landfill-red-desert-1=[img=item/landfill-red-desert-1]Red desert
 sb-default-landfill-landfill-sand-3=[img=item/landfill-sand-3]Sand
